Add switch Btns

--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -80,7 +80,7 @@
             <button class="active category">카테고리</button>
             <button class="theme">테마</button>
           </div>
-          <ul class="search__checkbox checkbox">
+          <ul class="search__checkbox">
             <li class="checked" data-filter="*">
               <input type="checkbox" id="all">
               <label for="all">전체 상품보기</label>
@@ -125,7 +125,7 @@
           <div class="search__theme">
             <img src="../../images/gift/theme.img/theme1.jpg" alt="">
             <img src="../../images/gift/theme.img/theme2.jpg" alt="">
-            <img src="../../images/gift/theme.img/theme3.jpg" alt="">
+            <img src="../../images/gift/theme.img/theme3.png" alt="">
             <img src="../../images/gift/theme.img/theme4.jpg" alt="">
           </div>
         </div>
