--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -75,9 +75,9 @@
             <i class="fas fa-chevron-up"></i>
           </button>
         </div>
-        <div class="searchBtn">
+        <div class="searchBtn active">
           <div class="searchBtn__container">
-            <button class="active category">카테고리</button>
+            <button class="category active">카테고리</button>
             <button class="theme">테마</button>
           </div>
           <ul class="search__checkbox">
