--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -30,29 +30,59 @@
           </a>
         </div>
         <ul class="navbar__menu">
-          <li class="navbar__menu__item">
-            <a href="../drink/drink.html">Drink</a>
+          <li class="navbar__menu__item" id="drink">
+            <a href="../drink/drink.html" class="drink">Drink</a>
+            <ul class="dropdown">
+              <li class="dropdown__item"><a href="#">골드 브루 커피</a></li>
+              <li class="dropdown__item"><a href="#">브루드 커피</a></li>
+              <li class="dropdown__item"><a href="#">에스프레소</a></li>
+              <li class="dropdown__item"><a href="#">프라푸치노</a></li>
+              <li class="dropdown__item"><a href="#">블렌디드</a></li>
+              <li class="dropdown__item"><a href="#">스타벅스 피지오</a></li>
+              <li class="dropdown__item"><a href="#">티(티바나)</a></li>
+              <li class="dropdown__item"><a href="#">기타 제조 음료</a></li>
+              <li class="dropdown__item"><a href="#">스타벅스 주스(병음료)</a></li>
+            </ul>
           </li>
-          <li class="navbar__menu__item"><a href="＃">Food</a></li>
-          <li class="navbar__menu__item"><a href="../gift/gift.html">Gift</a></li>
-          <li class="navbar__menu__item"><a href="../card/card.html">Card</a></li>
-          <li class="navbar__menu__item"><a href="#">Menu Story</a></li>
+          <li class="navbar__menu__item" id="food">
+            <a href="＃" class="food">Food</a>
+            <ul class="dropdown">
+              <li class="dropdown__item"><a href="#">브레드</a></li>
+              <li class="dropdown__item"><a href="#">케이크</a></li>
+              <li class="dropdown__item"><a href="#">샌드위치 &amp; 샐러드</a></li>
+              <li class="dropdown__item"><a href="#">따뜻한 푸드</a></li>
+              <li class="dropdown__item"><a href="#">과일 &amp; 요거트</a></li>
+              <li class="dropdown__item"><a href="#">스낵 &amp; 미니 디저트</a></li>
+              <li class="dropdown__item"><a href="#">아이스크림</a></li>
+            </ul>
+          </li>
+          <li class="navbar__menu__item">
+            <a href="../gift/gift.html">Gift</a>
+            <ul class="dropdown">
+              <li class="dropdown__item"><a href="#">머그</a></li>
+              <li class="dropdown__item"><a href="#">글라스</a></li>
+              <li class="dropdown__item"><a href="#">플라스틱 텀블러</a></li>
+              <li class="dropdown__item"><a href="#">스테인리스 템블러</a></li>
+              <li class="dropdown__item"><a href="#">보온병</a></li>
+              <li class="dropdown__item"><a href="#">액세서리</a></li>
+              <li class="dropdown__item"><a href="#">커피 용품</a></li>
+              <li class="dropdown__item"><a href="#">패키지 티(티바나)</a></li>
+              <li class="dropdown__item"><a href="#">스타벅스 플래너</a></li>
+            </ul>
+          </li>
+          <li class="navbar__menu__item">
+            <a href="../card/card.html">Card</a>
+            <ul class="dropdown">
+              <li class="dropdown__item"><a href="#">실물카드</a></li>
+              <li class="dropdown__item"><a href="#">e-Gift 카드</a></li>
+            </ul>
+          </li>
+          <li class="navbar__menu__item">
+            <a href="#">Menu Story</a>
+          </li>
         </ul>
       </div>
     </nav>
-    <!-- <div class="dropdown">
-      <ul>
-        <li class="dropdown__item">골드 브루 커피</li>
-        <li class="dropdown__item">브루드 커피</li>
-        <li class="dropdown__item">에스프레소</li>
-        <li class="dropdown__item">프라푸치노</li>
-        <li class="dropdown__item">블렌디드</li>
-        <li class="dropdown__item">스타벅스 피지오</li>
-        <li class="dropdown__item">티(티바나)</li>
-        <li class="dropdown__item">기타 제조 음료</li>
-        <li class="dropdown__item">스타벅스 주스(병음료)</li>
-      </ul>
-    </div> -->
 
     <!-- Header -->
     <header class="header">
@@ -72,7 +102,7 @@
         <div class="search__titleAndMorebtn">
           <h2>분류 보기</h2>
           <button class="search__upBtn">
-            <i class="fas fa-chevron-up"></i>
+            <i class="fas fa-chevron-down"></i>
           </button>
         </div>
         <div class="searchBtn active">
