드링크 아이템 border-radius 추가, 체크박스 addeventlistner 수정

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -90,6 +90,7 @@
                                 data-key="category"
                                 data-value="all"
                                 id="all"
+                                checked
                               />
                               <label for="product_all">전체 상품보기</label>
                             </li>
