--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gift | Starbucks Coffee Korea</title>
   <link rel="shortcut icon" href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828" type="image/ico"/>
-  <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../../css/gift.css">
   <script defer src="../../js/gift.js"></script>
+  <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- Header -->
