--- a/pages/card/card.html
+++ b/pages/card/card.html
@@ -7,26 +7,36 @@
     <title>Card | Starbucks Coffee Korea</title>
     <link rel="stylesheet" href="../../css/card.css">
     <link rel="shortcut icon" type="image/x-icon" href="https://www.starbucks.co.kr/common/img/common/logo.png"> <!-- favicon -->
+    <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrapper">
     <!-- GNB -->
-    <header class="header-layout">
-        <div class="contents-layout">
-            <div class="flex">
-                <div class="logo"><a href="../../index.html"></a></div>
-                <nav class="gnb">
-                    <ul>
-                        <a href="../drink/drink.html"><li>Drink</li></a>
-                        <a href="#"><li>Food</li></a>
-                        <a href="../gift/gift.html"><li>Gift</li></a>
-                        <a href="../card/card.html"><li>Card</li></a>
-                        <a href="#"><li>Menu Story</li></a>
-                    </ul>
-                </nav>
+    <header>
+        <nav>
+            <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+            <div class="menus">
+                <ul class="menus__sub-menu">
+                    <li>Sign In</li>
+                    <li>My Starbucks</li>
+                    <li>Customer Service &amp; Ideas</li>
+                    <li>Find a Store</li>
+                    <button>
+                        <i class="fas fa-search"></i>
+                    </button>
+                </ul>
+                <ul class="menus__main-manu">
+                    <li><a href="../drink/drink.html" class="drink">drink</a></li>
+                    <li><a href="＃" class="food">food</a></li>
+                    <li><a href="../gift/gift.html">gift</a></li>
+                    <li><a href="../card/card.html">card</a></li>
+                    <li><a href="../card/card.html">starbucks rewards</a></li>
+                    <li><a href="../card/card.html">what's new</a></li>
+                </ul>
             </div>
-        </div>
+        </nav>
     </header>
+
     <!-- container -->
     <div class="contents-layout">
         <!-- title -->
