Fix header path

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -18,7 +18,9 @@
       <!-- 메뉴바 -->
       <header>
         <nav>
-          <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+          <a href="../../index.html">
+            <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+          </a>
           <div class="menus">
             <ul class="menus__sub-menu">
               <li>Sign In</li>
@@ -31,11 +33,11 @@
             </ul>
             <ul class="menus__main-manu">
               <li><a href="../drink/drink.html" class="drink">drink</a></li>
-              <li><a href="＃" class="food">food</a></li>
+              <li><a href="../food/food.html" class="food">food</a></li>
               <li><a href="../gift/gift.html">gift</a></li>
               <li><a href="../card/card.html">card</a></li>
-              <li><a href="../card/card.html">starbucks rewards</a></li>
-              <li><a href="../card/card.html">what's new</a></li>
+              <li><a href="#">starbucks rewards</a></li>
+              <li><a href="#">what's new</a></li>
             </ul>
           </div>
         </nav>
