--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -14,7 +14,9 @@
   <!-- Header -->
   <header>
     <nav>
-      <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+      <a href="../../index.html">
+        <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+      </a>
       <div class="menus">
         <ul class="menus__sub-menu">
           <li>Sign In</li>
@@ -24,14 +26,14 @@
           <button>
             <i class="fas fa-search"></i>
           </button>
-        </ul>
+        </ul> 
         <ul class="menus__main-manu">
           <li><a href="../drink/drink.html" class="drink">drink</a></li>
-          <li><a href="＃" class="food">food</a></li>
+          <li><a href="../food/food.html" class="food">food</a></li>
           <li><a href="../gift/gift.html">gift</a></li>
           <li><a href="../card/card.html">card</a></li>
-          <li><a href="../card/card.html">starbucks rewards</a></li>
-          <li><a href="../card/card.html">what's new</a></li>
+          <li><a href="#">starbucks rewards</a></li>
+          <li><a href="#">what's new</a></li>
         </ul>
       </div>
     </nav>
