--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -10,7 +10,10 @@
       href="https://image.istarbucks.co.kr/common/img/common/favicon.ico?v=200828"
       type="image/ico"
     />
-    <script src="https://kit.fontawesome.com/7a4cfa35a1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7a4cfa35a1.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Drink | Starbucks Coffee Korea</title>
   </head>
   <body>
@@ -19,7 +22,11 @@
       <header>
         <nav>
           <a href="../../index.html">
-            <img class="logo" src="https://www.starbucks.co.kr/common/img/common/logo.png" alt="logo image">
+            <img
+              class="logo"
+              src="https://www.starbucks.co.kr/common/img/common/logo.png"
+              alt="logo image"
+            />
           </a>
           <div class="menus">
             <ul class="menus__sub-menu">
@@ -105,7 +112,7 @@
                                 id="all"
                                 checked
                               />
-                              <label for="product_all">전체 상품보기</label>
+                              <label for="all">전체 상품보기</label>
                             </li>
                             <li>
                               <input
@@ -115,9 +122,7 @@
                                 data-key="category"
                                 data-value="coldBrew"
                               />
-                              <label for="product_cold_brew"
-                                >콜드 브루 커피</label
-                              >
+                              <label for="coldBrew">콜드 브루 커피</label>
                             </li>
                             <li>
                               <input
@@ -127,7 +132,7 @@
                                 data-value="brood"
                                 data-key="category"
                               />
-                              <label for="product_brood">브루드 커피</label>
+                              <label for="brood">브루드 커피</label>
                             </li>
                             <li>
                               <input
@@ -137,7 +142,7 @@
                                 name="product"
                                 id="espresso"
                               />
-                              <label for="product_espresso">에스프레소</label>
+                              <label for="espresso">에스프레소</label>
                             </li>
                             <li>
                               <input
@@ -147,9 +152,7 @@
                                 name="product"
                                 id="frappuccino"
                               />
-                              <label for="product_frappuccino"
-                                >프라푸치노</label
-                              >
+                              <label for="frappuccino">프라푸치노</label>
                             </li>
                             <li>
                               <input
@@ -159,7 +162,7 @@
                                 name="product"
                                 id="blended"
                               />
-                              <label for="product_blended">블렌디드</label>
+                              <label for="blended">블렌디드</label>
                             </li>
                             <li>
                               <input
@@ -169,7 +172,7 @@
                                 name="product"
                                 id="fizzo"
                               />
-                              <label for="product_fizzo">스타벅스 피지오</label>
+                              <label for="fizzo">스타벅스 피지오</label>
                             </li>
                             <li>
                               <input
@@ -179,7 +182,7 @@
                                 name="product"
                                 id="tea"
                               />
-                              <label for="product_tea">티 (티바나)</label>
+                              <label for="tea">티 (티바나)</label>
                             </li>
                             <li>
                               <input
@@ -189,7 +192,7 @@
                                 name="product"
                                 id="etc"
                               />
-                              <label for="product_etc">기타 제조 음료</label>
+                              <label for="etc">기타 제조 음료</label>
                             </li>
                             <li>
                               <input
@@ -199,9 +202,7 @@
                                 name="product"
                                 id="juice"
                               />
-                              <label for="product_juice"
-                                >스타벅스 주스(병음료)</label
-                              >
+                              <label for="juice">스타벅스 주스(병음료)</label>
                             </li>
                           </div>
                         </div>
