--- a/pages/card/card.html
+++ b/pages/card/card.html
@@ -580,6 +580,6 @@
         </div>
     </footer>
     </div>
-    <script src="../../js/card.js"></script>
+    <script src="../../js/card/card.js"></script>
 </body>
 </html>
