--- a/pages/gift/gift.html
+++ b/pages/gift/gift.html
@@ -109,6 +109,26 @@
     </div>
   </section>
 
+  <!-- select box -->
+  <section class="dropdown">
+    <div class="dropdown-select">
+      <span>상세분류</span>
+      <i class="fas fa-chevron-down"></i>
+    </div>
+    <div class="dropdown-list">
+      <button>
+        <div class="checkbox"></div>
+        <img src="../../images/gift/new.png" alt="">
+        <span>신규 출시된 메뉴</span>
+      </button>
+      <button>
+        <div class="checkbox"></div>
+        <img src="../../images/gift/limited.png" alt="">
+        <span>한정기간 출시되는 시즌성 메뉴</span>
+      </button>
+    </div>
+  </section>
+
   <!-- Item section -->
   <section class="items">
     <div class="items__category" data-type="mug">
