food json 데이터 처리 테스트

--- a/pages/food/food.html
+++ b/pages/food/food.html
@@ -314,5 +314,6 @@
       </div>
     </footer>
     <script src="../../js/food/food.js" defer></script>
+    <script src="../../js/food/checkBoxFilter.js" defer></script>
   </body>
 </html>
