food page에서 전체 상품 클릭시 모든 페이지 표시

--- a/pages/food/food.html
+++ b/pages/food/food.html
@@ -199,6 +199,9 @@
             </dl>
           </div>
         </div>
+        <div class="categoryList" id="category">
+          <ul class="list"></ul>
+        </div>
       </div>
     </main>
     <footer id="footer">
