drink page에서 전체화면 바로 나오게 설정

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -104,7 +104,12 @@
                         <div id="mCSB_1">
                           <div id="mCSB_1_container">
                             <li>
-                              <input type="checkbox" name="product" id="all" />
+                              <input
+                                type="checkbox"
+                                name="product"
+                                id="all"
+                                checked
+                              />
                               <label for="all">전체 상품보기</label>
                             </li>
                             <li>
