--- a/pages/food/food.html
+++ b/pages/food/food.html
@@ -97,60 +97,57 @@
                         <div id="mCSB_1">
                           <div id="mCSB_1_container">
                             <li>
-                              <input type="checkbox" name="product" id="all" />
+                              <input
+                                type="checkbox"
+                                name="food"
+                                id="all"
+                                checked
+                              />
                               <label for="all">전체 상품보기</label>
                             </li>
                             <li>
-                              <input
-                                type="checkbox"
-                                name="product"
-                                id="bakery"
-                              />
-                              <label for="bakery">브레드</label>
+                              <input type="checkbox" name="food" id="Bred" />
+                              <label for="Bred">브레드</label>
                             </li>
                             <li>
-                              <input type="checkbox" name="product" id="cake" />
-                              <label for="cake">케이크</label>
+                              <input type="checkbox" name="food" id="Cake" />
+                              <label for="Cake">케이크</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
-                                name="product"
-                                id="sandwich"
+                                name="food"
+                                id="Sandwich"
                               />
-                              <label for="sandwich">샌드위치 & 샐러드</label>
+                              <label for="Sandwich">샌드위치 & 샐러드</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
-                                name="product"
-                                id="warm_food"
+                                name="food"
+                                id="WarmFood"
                               />
-                              <label for="warm_food">따뜻한 푸드</label>
+                              <label for="WarmFood">따뜻한 푸드</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
-                                name="product"
-                                id="fruit_yogurt"
+                                name="food"
+                                id="fruitYogurt"
                               />
-                              <label for="fruit_yogurt">과일 & 요거트</label>
+                              <label for="fruitYogurt">과일 & 요거트</label>
+                            </li>
+                            <li>
+                              <input type="checkbox" name="food" id="Snack" />
+                              <label for="Snack">스낵 & 미니 디저트</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
-                                name="product"
-                                id="snack"
+                                name="food"
+                                id="IceCream"
                               />
-                              <label for="snack">스낵 & 미니 디저트</label>
-                            </li>
-                            <li>
-                              <input
-                                type="checkbox"
-                                name="product"
-                                id="ice_cream"
-                              />
-                              <label for="ice_cream">아이스크림</label>
+                              <label for="IceCream">아이스크림</label>
                             </li>
                           </div>
                         </div>
@@ -165,7 +162,40 @@
                   <li>
                     <a href="#"
                       ><img
-                        src="https://image.istarbucks.co.kr/upload/banner/themebnr/82p8KL_20210412162303607.jpg"
+                        class="onesun"
+                        src="https://image.istarbucks.co.kr/upload/banner/themebnr/82p8KL_20210412162412216.jpg"
+                        alt=""
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img
+                        class="brunch"
+                        src="https://image.istarbucks.co.kr/upload/banner/themebnr/bnr_brunch_menu.jpg"
+                        alt=""
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img
+                        class="everland"
+                        src="https://image.istarbucks.co.kr/upload/banner/themebnr/everland_r.jpg"
+                        alt=""
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img
+                        class="wholeCake"
+                        src="https://image.istarbucks.co.kr/upload/banner/themebnr/bnr_wholecake_190425.jpg"
+                        alt=""
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img
+                        class="jeju"
+                        src="https://image.istarbucks.co.kr/upload/banner/themebnr/200731_jeju.jpg"
                         alt=""
                     /></a>
                   </li>
@@ -177,6 +207,7 @@
         <div class="categoryList" id="category">
           <ul class="list"></ul>
         </div>
+        <div class="themeList"></div>
       </div>
     </main>
     <footer id="footer">
@@ -292,6 +323,7 @@
       </div>
     </footer>
     <script src="../../js/food/food.js" defer></script>
-    <script src="../../js/food/checkBoxFilter.js" defer></script>
+    <script src="../../js/food/category.js" defer></script>
+    <script src="/js/food/theme.js" defer></script>
   </body>
 </html>
