드링크 페이지 subtitle 한글로 변경

--- a/pages/drink/drink.html
+++ b/pages/drink/drink.html
@@ -116,65 +116,77 @@
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="coldBrew"
+                                id="콜드 브루 커피"
                               />
-                              <label for="coldBrew">콜드 브루 커피</label>
+                              <label for="콜드 브루 커피">콜드 브루 커피</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="brood"
+                                id="브루드 커피"
                               />
-                              <label for="brood">브루드 커피</label>
+                              <label for="브루드 커피">브루드 커피</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="espresso"
+                                id="에스프레소"
                               />
-                              <label for="espresso">에스프레소</label>
+                              <label for="에스프레소">에스프레소</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="frappuccino"
+                                id="프라푸치노"
                               />
-                              <label for="frappuccino">프라푸치노</label>
+                              <label for="프라푸치노">프라푸치노</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="blended"
+                                id="블렌디드"
                               />
-                              <label for="blended">블렌디드</label>
+                              <label for="블렌디드">블렌디드</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="fizzo"
+                                id="스타벅스 피지오"
                               />
-                              <label for="fizzo">스타벅스 피지오</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" name="product" id="tea" />
-                              <label for="tea">티 (티바나)</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" name="product" id="etc" />
-                              <label for="etc">기타 제조 음료</label>
+                              <label for="스타벅스 피지오"
+                                >스타벅스 피지오</label
+                              >
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="product"
-                                id="juice"
+                                id="티 (티바나)"
                               />
-                              <label for="juice">스타벅스 주스(병음료)</label>
+                              <label for="티 (티바나)">티 (티바나)</label>
+                            </li>
+                            <li>
+                              <input
+                                type="checkbox"
+                                name="product"
+                                id="기타 제조 음료"
+                              />
+                              <label for="기타 제조 음료">기타 제조 음료</label>
+                            </li>
+                            <li>
+                              <input
+                                type="checkbox"
+                                name="product"
+                                id="스타벅스 주스(병음료)"
+                              />
+                              <label for="스타벅스 주스(병음료)"
+                                >스타벅스 주스(병음료)</label
+                              >
                             </li>
                           </div>
                         </div>
