food page 테마 필터링 및 subtitle 한글 변경

--- a/pages/food/food.html
+++ b/pages/food/food.html
@@ -106,48 +106,56 @@
                               <label for="all">전체 상품보기</label>
                             </li>
                             <li>
-                              <input type="checkbox" name="food" id="Bred" />
-                              <label for="Bred">브레드</label>
+                              <input type="checkbox" name="food" id="브레드" />
+                              <label for="브레드">브레드</label>
                             </li>
                             <li>
-                              <input type="checkbox" name="food" id="Cake" />
-                              <label for="Cake">케이크</label>
-                            </li>
-                            <li>
-                              <input
-                                type="checkbox"
-                                name="food"
-                                id="Sandwich"
-                              />
-                              <label for="Sandwich">샌드위치 & 샐러드</label>
+                              <input type="checkbox" name="food" id="케이크" />
+                              <label for="케이크">케이크</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="food"
-                                id="WarmFood"
+                                id="샌드위치 & 샐러드"
                               />
-                              <label for="WarmFood">따뜻한 푸드</label>
+                              <label for="샌드위치 & 샐러드"
+                                >샌드위치 & 샐러드</label
+                              >
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="food"
-                                id="fruitYogurt"
+                                id="따뜻한 푸드"
                               />
-                              <label for="fruitYogurt">과일 & 요거트</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" name="food" id="Snack" />
-                              <label for="Snack">스낵 & 미니 디저트</label>
+                              <label for="따뜻한 푸드">따뜻한 푸드</label>
                             </li>
                             <li>
                               <input
                                 type="checkbox"
                                 name="food"
-                                id="IceCream"
+                                id="과일 & 요거트"
                               />
-                              <label for="IceCream">아이스크림</label>
+                              <label for="과일 & 요거트">과일 & 요거트</label>
+                            </li>
+                            <li>
+                              <input
+                                type="checkbox"
+                                name="food"
+                                id="스낵 & 미니 디저트"
+                              />
+                              <label for="스낵 & 미니 디저트"
+                                >스낵 & 미니 디저트</label
+                              >
+                            </li>
+                            <li>
+                              <input
+                                type="checkbox"
+                                name="food"
+                                id="아이스크림"
+                              />
+                              <label for="아이스크림">아이스크림</label>
                             </li>
                           </div>
                         </div>
@@ -207,7 +215,9 @@
         <div class="categoryList" id="category">
           <ul class="list"></ul>
         </div>
-        <div class="themeList"></div>
+        <div class="themeLists">
+          <ul class="themelist"></ul>
+        </div>
       </div>
     </main>
     <footer id="footer">
